jasm/tests/snapshots/lexer-directives-dot_dot_super.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
dot_dot_super ..super
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/lexer/directives/dot_dot_super.ja:1:15 ]
   │
 1 │ dot_dot_super ..super
   │               ───┬───  
   │                  ╰───── did you mean '.super' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code
───╯
